# apps/donation/src/history/history.router.ts
@@ -1,12 +1,10 @@
-import { authenticate } from "@/auth/auth.middleware";
-import { authorize, login, me, register } from "@/request/donation.controller";
 import { Router } from "express";
+import { all, create, single } from "./history.controller";
 
-const authRouter: Router = Router();
+const historyRouter: Router = Router();
 
-authRouter.post("/login", login);
-authRouter.post("/register", register);
-authRouter.get("/me", authenticate, me);
-authRouter.post("/authorize", authenticate, authorize);
+historyRouter.get("/", all);
+historyRouter.post("/", create);
+historyRouter.get("/:id", single);
 
-export default authRouter;
+export default historyRouter;
